methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vuBiscuit=false){
               ^MethodsReturning:12: error: type mismatch;
 found   : Unit
 required: Boolean
    for (n<-1 to 6){
          ^MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vuBiscuit=false){
  ^